add post deploys commands to deplots instances
